src/main/log/build_2020-07-11_23-17-15/main/stderr.log
/Users/mukuyo/RI-AI/src/main/src/main.cpp:25:57: error: no member named 'frames' in 'message_info::msg::RobotCommands_<std::__1::allocator<void> >'
    RCLCPP_INFO(this->get_logger(),"%f",vision_message->frames[0].balls[0].pose.x);
                                        ~~~~~~~~~~~~~~  ^
/Users/mukuyo/ros2_ws/ros2-osx/include/rclcpp/logging.hpp:545:35: note: expanded from macro 'RCLCPP_INFO'
        RCLCPP_ALL_BUT_FIRST_ARGS(__VA_ARGS__,"")); \
                                  ^~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rclcpp/logging.hpp:36:43: note: expanded from macro 'RCLCPP_ALL_BUT_FIRST_ARGS'
#define RCLCPP_ALL_BUT_FIRST_ARGS(N, ...) __VA_ARGS__
                                          ^~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rcutils/logging_macros.h:503:5: note: expanded from macro 'RCUTILS_LOG_INFO_NAMED'
    __VA_ARGS__)
    ^~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rcutils/logging_macros.h:72:64: note: expanded from macro 'RCUTILS_LOG_COND_NAMED'
      rcutils_log(&__rcutils_logging_location, severity, name, __VA_ARGS__); \
                                                               ^~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
